Change method name to camel case. Add created response in Add account/currency. Add domain URI patter.
